--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Welcome to My Etch-a-Sketch</h1>
     
-    <!-- Your content goes here -->
+    <div id="container"></div>
     
     <script src="etch-a-sketch.js"></script>
 </body>
