--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
     <h1>Welcome to My Etch-a-Sketch</h1>
-    
+
+    <button id="reset">Reset</button>
     <div id="container"></div>
     
     <script src="etch-a-sketch.js"></script>
