--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <link rel="stylesheet" type="text/css" href="etch-a-sketch.css">
 </head>
 <body>
-    <h1>Welcome to My Etch-a-Sketch</h1>
+    <h1>Etch-a-Sketch</h1>
 
+    <div id="grid"></div>
     <button id="reset">Reset</button>
     <div id="container"></div>
     
